# onboard_M600

./: CMakeLists.txt  README.md  package.xml
include/: M600_mission.h
launch/: mission.launch
src/: M600_mission.cpp
